attempts to fix overflow issues with mobile

--- a/assets/menu.css
+++ b/assets/menu.css
@@ -1,10 +1,11 @@
 .menu-wrap {
-    position: absolute;
+    position: fixed;
     right: 10px;
     top: 0px;
     margin: 0px;
     padding: 0px;
     overflow-x: hidden;
+    z-index: 999;
 }
 
 .menu-wrap .hamburger {
