--- a/assets/style.css
+++ b/assets/style.css
@@ -6,16 +6,18 @@ html { font-family: 'Inter', sans-serif; }
 
 * {
     font-family: Inter;
-    text-align: center;
+   
 }
 body {
     background-color: #5BDB94;
+    overflow-x: hidden;
     position: relative;
 }
 
 
 /*header*/
 header {
+    display:flex;
     height: 72px;
     width: 100%;
     background-color: #05396C;
@@ -24,6 +26,7 @@ header {
     right:0;
     left: 0;
     margin: 0;
+    z-index: 3;
 }
 
 /*header box shadow*/
@@ -41,8 +44,8 @@ header::after {
 
 h1 {
     height: 72px;
-    display: inline;
-    position:absolute;
+
+    position: absolute;
     left: 5px;
     top: 5px;
     font-size: 58px;
@@ -59,9 +62,12 @@ h1 {
     margin: 10px
 }
 
+main {
+    position: relative;
+}
 
-section {
-    margin: 0% 24px;
+main section {
+    margin: 0% 24px 30px;
     height: 300px;
     background-color: #05396C;
     color:#5BDB94;
